--- a/app/views/budget/index.html.erb
+++ b/app/views/budget/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Budget#index</h1>
-<p>Find me in app/views/budget/index.html.erb</p>
+<div class="jumbotron">
+<h1>Budget Buddy</h1>
+<p>Your own personalized budget planner</p>
+
+<%= link_to "Sign In", new_session_path %> or
+<%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %>
+</div>
