new expense button

--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -20,7 +20,7 @@
         </tr>
         </table>
 
-        <%= f.submit "Save" class: 'btn btn-success' %>
+        <%= f.submit "Save", class: 'btn btn-success' %>
         <% end %>
     </div>
 </div>
