--- a/app/views/budget/index.html.erb
+++ b/app/views/budget/index.html.erb
@@ -2,6 +2,6 @@
 <h1>Budget Buddy</h1>
 <p>Your own personalized budget planner</p>
 
-<%= link_to "Sign In", new_session_path %> or
+<%= link_to "Sign In", new_session_path, class: 'btn btn-success' %> or
 <%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %>
 </div>
