--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -2,6 +2,7 @@
 
 <div class="row">
     <div class="row">
+    
     <%= form_for @expense do |f| %>
         <table class="table">
         <tr>
@@ -17,11 +18,16 @@
             <td>
             <%= f.text_field :planned_amount, class: 'form-control', placeholder: "estimated budget" %>
             </td>
+
+            <td>
+            <%= f.text_field :actual_amount, class: 'form-control', placeholder: "actual amount" %>
+            </td>
         </tr>
         </table>
 
-        <%= f.submit "Save" class: 'btn btn-success' %>
+        <%= f.submit "Save", class: 'btn btn-success' %>
         <% end %>
+        <%= link_to "Back", expenses_path, class: 'btn btn-warning' %>
     </div>
 </div>
 
