--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -20,14 +20,16 @@
                 </td>
 
                 <td>
-                <%= expense.actual_ammount %>
+                <%= expense.actual_amount %>
                 </td>
 
                 <td>
                 <%= link_to "Edit", edit_expense_path(expense), class: 'btn btn-warning' %>
+                <%= link_to "Delete", expense, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this?'} %>
                 </td>
             </tr>
         <% end %>
         </table>
+        <%= link_to "New Expense", new_expense_path, class: 'btn btn-success' %>
 </div>
 
