--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -9,6 +9,8 @@
             <th scope="col">Expense Catagory</th>
             <th scope="col">Planned Amount</th>
             <th scope="col">Actual Ammount</th>
+            <th scope="col">Short Term Savings</th>
+            <th scope="col">Long Term Savings</th>
         </tr>
         <tr>
             <td>
@@ -21,6 +23,14 @@
 
             <td>
             <%= f.text_field :actual_amount, class: 'form-control', placeholder: "actual amount" %>
+            </td>
+
+            <td>
+            <%= f.check_box :short_term_savings, class: 'short-term-check' %>
+            </td>
+
+            <td>
+            <%= f.check_box :long_term_savings, class: 'long-term-check' %>
             </td>
         </tr>
         </table>
